--- a/drupal/sites/all/modules/custom/wordlet/css/wordlet.css
+++ b/drupal/sites/all/modules/custom/wordlet/css/wordlet.css
@@ -143,6 +143,10 @@
     padding: 0 1em;
 }
 
+.wordlet-full-html textarea {
+    width: 578px;
+}
+
 /* Drupal admin bar */
 
 #toolbar {
